<resources>
    <string name="app_name">Aules</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aules_infantil">Aules_Infantil</string>
    <string name="activity_infantil">activity_aules_infantil.xml</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compose_shortcut_long_label1">Infantil</string>
    <string name="compose_shortcut_long_label2">Primaria</string>
    <string name="compose_shortcut_short_label1" />
    <string name="compose_shortcut_short_label2" />
    <string name="compose_shortcut_long_label3">ESO</string>
    <string name="compose_shortcut_short_label3" />
    <string name="compose_shortcut_long_label4">Bachillerato</string>
    <string name="compose_shortcut_short_label4" />
</resources>